Fix clipped "thoughtful"

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -85,7 +85,7 @@ header {
     height: 1.5em;
     vertical-align: top;
     margin: 0;
-    padding: 0 0.2em;
+    padding: 0;
     overflow: hidden;
 
     font-family: quimby-mayoral;
@@ -94,6 +94,7 @@ header {
 
     li {
       margin-bottom: 0.1em;
+      padding-right: 0.2em;
     }
   }
 }
